crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < -0.1e+1)'::jsonpath;"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    TypeCast@7..38
      AConst@7..28
        Sconst@7..28 "'$ ? (@.a < -0.1e+1)'"
      Typecast@28..30 "::"
      TypeName@30..38
        Ident@30..38 "jsonpath"
  Ascii59@38..39 ";"

