crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '00'::jsonpath;"
---
SelectStmt@0..22
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..21
    TypeCast@7..21
      AConst@7..11
        Sconst@7..11 "'00'"
      Typecast@11..13 "::"
      TypeName@13..21
        Ident@13..21 "jsonpath"
  Ascii59@21..22 ";"

